--- a/Input Field Text and Gradient Border/index.html
+++ b/Input Field Text and Gradient Border/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-  <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+<html lang="es">
+<head>
+<!--==================== METADATOS ====================-->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="description" content="Inputs">
+<meta name="keywords" content="HTML-CSS">
+<meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Input Field Text and Gradient Border Animation Effects</title>
+<!--==================== CSS ====================-->
+<link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+<!--==================== TITULO ====================-->
+<title>Inputs | Input Field Text and Gradient Border Animation Effects</title>
 
-    </head>
-
-  <body>
-   <div class="inputBox">
+<!--==================== ICONO DE PESTAÑA ====================-->
+<link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+</head>
+<body>
+  <div class="inputBox">
     <input type="text" required="required">
     <span>Nombre</span>
     <i></i>
-   </div>
-   <div class="inputBox">
+  </div>
+  <div class="inputBox">
     <input type="text" required="required">
     <span>Apellido</span>
     <i></i>
-   </div>
-  </body>
+  </div>
+</body>
 </html>
