--- a/Password Strength Checker 3/index.html
+++ b/Password Strength Checker 3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <!--==================== METADATOS ====================-->
   <meta charset="UTF-8">
@@ -26,8 +26,7 @@
     <div class="password-strength"></div>
     <div class="password-strength"></div>
   </div>
-  
-  <!--==================== script ====================-->
+  <!--==================== SCRIPT ====================-->
   <script>
     let passwordInput = document.getElementById('password');
     let passwordStrengths = document.querySelectorAll('.password-strength');
