--- a/Awesome Input Animation/index.html
+++ b/Awesome Input Animation/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Awesome Input Animation</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Awesome Input Animation</title>
 
-    </head>
-  <body>
-    <div class="wrapper">
-      <div class="input-data">
-         <input type="text" required>
-         <div class="underline"></div>
-         <label>Nombre</label>
-      </div>
-   </div>
-  </body>
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+</head>
+<body>
+  <div class="wrapper">
+    <div class="input-data">
+        <input type="text" required>
+        <div class="underline"></div>
+        <label>Nombre</label>
+    </div>
+  </div>
+</body>
 </html>
