--- a/Check Password & Confirm Password/index.html
+++ b/Check Password & Confirm Password/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS-JS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS-JS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Check Password & Confirm Password</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Check Password & Confirm Password</title>
 
-       <!--==================== ICONOS ====================-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/>
-    </head>
- <body>
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+
+  <!--==================== ICONOS ====================-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/>
+</head>
+<body>
   <div class="wrapper">
     <div class="input-box">
       <input id="create_pw" type="password" required>
@@ -39,54 +39,53 @@
     <div class="input-box button">
       <input id="button" type="button" value="Verificar" disabled>
     </div>
-</div>
- <!--==================== script ====================-->
-<script>
-const createPw = document.querySelector("#create_pw"),
- confirmPw = document.querySelector("#confirm_pw"),
- pwShow = document.querySelector(".show"),
- alertIcon = document.querySelector(".error"),
- alertText= document.querySelector(".text"),
- submitBtn = document.querySelector("#button");
- pwShow.addEventListener("click", ()=>{
-   if((createPw.type === "password") && (confirmPw.type === "password")){
-     createPw.type = "text";
-     confirmPw.type = "text";
-     pwShow.classList.replace("fa-eye-slash","fa-eye");
-   }else {
-     createPw.type = "password";
-     confirmPw.type = "password";
-     pwShow.classList.replace("fa-eye","fa-eye-slash");
-   }
- });
- createPw.addEventListener("input", ()=>{
-   let val = createPw.value.trim()
-   if(val.length >= 8){
-     confirmPw.removeAttribute("disabled");
-     submitBtn.removeAttribute("disabled");
-     submitBtn.classList.add("active");
-   }else {
-     confirmPw.setAttribute("disabled", true);
-     submitBtn.setAttribute("disabled", true);
-     submitBtn.classList.remove("active");
-     confirmPw.value = "";
-     alertText.style.color = "#a6a6a6";
-     alertText.innerText = "Ingrese al menos 8 caracteres";
-     alertIcon.style.display = "none";
-   }
- });
-submitBtn.addEventListener("click", ()=>{
- if(createPw.value === confirmPw.value){
-   alertText.innerText = "Las contraseñas coinciden";
-   alertIcon.style.display = "none";
-   alertText.style.color = "#4070F4";
- }else {
-   alertText.innerText = "Las contraseñas no coinciden";
-   alertIcon.style.display = "block";
-   alertText.style.color = "#D93025";
- }
-});
-</script>
-
-  </body>
+  </div>
+  <!--==================== SCRIPT ====================-->
+  <script>
+  const createPw = document.querySelector("#create_pw"),
+  confirmPw = document.querySelector("#confirm_pw"),
+  pwShow = document.querySelector(".show"),
+  alertIcon = document.querySelector(".error"),
+  alertText= document.querySelector(".text"),
+  submitBtn = document.querySelector("#button");
+  pwShow.addEventListener("click", ()=>{
+  if((createPw.type === "password") && (confirmPw.type === "password")){
+  createPw.type = "text";
+  confirmPw.type = "text";
+  pwShow.classList.replace("fa-eye-slash","fa-eye");
+  }else {
+  createPw.type = "password";
+  confirmPw.type = "password";
+  pwShow.classList.replace("fa-eye","fa-eye-slash");
+  }
+  });
+  createPw.addEventListener("input", ()=>{
+  let val = createPw.value.trim()
+  if(val.length >= 8){
+  confirmPw.removeAttribute("disabled");
+  submitBtn.removeAttribute("disabled");
+  submitBtn.classList.add("active");
+  }else {
+  confirmPw.setAttribute("disabled", true);
+  submitBtn.setAttribute("disabled", true);
+  submitBtn.classList.remove("active");
+  confirmPw.value = "";
+  alertText.style.color = "#a6a6a6";
+  alertText.innerText = "Ingrese al menos 8 caracteres";
+  alertIcon.style.display = "none";
+  }
+  });
+  submitBtn.addEventListener("click", ()=>{
+  if(createPw.value === confirmPw.value){
+  alertText.innerText = "Las contraseñas coinciden";
+  alertIcon.style.display = "none";
+  alertText.style.color = "#4070F4";
+  }else {
+  alertText.innerText = "Las contraseñas no coinciden";
+  alertIcon.style.display = "block";
+  alertText.style.color = "#D93025";
+  }
+  });
+  </script>
+</body>
 </html>
