--- a/Password Show or Hide Toggle/index.html
+++ b/Password Show or Hide Toggle/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS-JS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS-JS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Password Show or Hide Toggle</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Password Show or Hide Toggle</title>
 
-      <!--==================== ICONO ===================-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    </head>
-    <body>
-      <div class="wrapper">
-        <input type="password" placeholder="Ingresa tu contraseña" required>
-        <span class="show-btn"><i class="fas fa-eye"></i></span>
-      </div>
-      <!--==================== script ====================-->
-      <script>
-        const passField = document.querySelector("input");
-        const showBtn = document.querySelector("span i");
-        showBtn.onclick = (()=>{
-          if(passField.type === "password"){
-            passField.type = "text";
-            showBtn.classList.add("hide-btn");
-          }else{
-            passField.type = "password";
-            showBtn.classList.remove("hide-btn");
-          }
-        });
-      </script>
-      
-  </body>
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+
+  <!--==================== ICONO ===================-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+</head>
+<body>
+  <div class="wrapper">
+    <input type="password" placeholder="Ingresa tu contraseña" required>
+    <span class="show-btn"><i class="fas fa-eye"></i></span>
+  </div>
+  <!--==================== SCRIPT ====================-->
+  <script>
+  const passField = document.querySelector("input");
+  const showBtn = document.querySelector("span i");
+  showBtn.onclick = (()=>{
+  if(passField.type === "password"){
+    passField.type = "text";
+    showBtn.classList.add("hide-btn");
+  }else{
+    passField.type = "password";
+    showBtn.classList.remove("hide-btn");
+  }
+  });
+  </script>
+</body>
 </html>
