--- a/Password Validation Check/index.html
+++ b/Password Validation Check/index.html
@@ -1,60 +1,59 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS-JS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS-JS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Password Validation Check</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Password Validation Check</title>
 
-    <!--==================== ICONOS ====================-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    </head>
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
 
-  <body>
-    <div class="wrapper">
-      <div class="pass-field">
-        <input type="password" placeholder="Crear contraseña">
-        <i class="fa-solid fa-eye"></i>
-      </div>
-      <div class="content">
-        <p>La contraseña debe contener</p>
-        <ul class="requirement-list">
-          <li>
-            <i class="fa-solid fa-circle"></i>
-            <span>Al menos 8 caracteres de longitud</span>
-          </li>
-          <li>
-            <i class="fa-solid fa-circle"></i>
-            <span>Al menos 1 número (0...9)</span>
-          </li>
-          <li>
-            <i class="fa-solid fa-circle"></i>
-            <span>Al menos 1 letra minúscula (a...z)</span>
-          </li>
-          <li>
-            <i class="fa-solid fa-circle"></i>
-            <span>Al menos 1 símbolo especial (!...$)</span>
-          </li>
-          <li>
-            <i class="fa-solid fa-circle"></i>
-            <span>Al menos 1 letra mayúscula (A...Z)</span>
-          </li>
-        </ul>
-      </div>
+  <!--==================== ICONOS ====================-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+</head>
+<body>
+  <div class="wrapper">
+    <div class="pass-field">
+      <input type="password" placeholder="Crear contraseña">
+      <i class="fa-solid fa-eye"></i>
     </div>
-       <!--==================== script ====================-->
-    <script src="assets/js/script.js"></script>
-  </body>
+    <div class="content">
+      <p>La contraseña debe contener</p>
+      <ul class="requirement-list">
+        <li>
+          <i class="fa-solid fa-circle"></i>
+          <span>Al menos 8 caracteres de longitud</span>
+        </li>
+        <li>
+          <i class="fa-solid fa-circle"></i>
+          <span>Al menos 1 número (0...9)</span>
+        </li>
+        <li>
+          <i class="fa-solid fa-circle"></i>
+          <span>Al menos 1 letra minúscula (a...z)</span>
+        </li>
+        <li>
+          <i class="fa-solid fa-circle"></i>
+          <span>Al menos 1 símbolo especial (!...$)</span>
+        </li>
+        <li>
+          <i class="fa-solid fa-circle"></i>
+          <span>Al menos 1 letra mayúscula (A...Z)</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!--==================== SCRIPT ====================-->
+  <script src="assets/js/script.js"></script>
+</body>
 </html>
