--- a/Random Password Generator App/index.html
+++ b/Random Password Generator App/index.html
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS-JS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS-JS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Random Password Generator App</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Random Password Generator App</title>
 
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    </head>
-    <body>
-       <div class="container">
-          <div class="text">
-          Generador de contraseñas<br>aleatorias 
-          </div>
-          <div class="input-data">
-             <div class="display">
-                <input type="text">
-                <span class="far fa-copy" onclick="copy()"></span>
-                <span class="fas fa-copy" onclick="copy()"></span>
-             </div>
-             <button>Generar contraseña</button>
-          </div>
-       </div>
-       <!--==================== script ====================--><script>
-          const display = document.querySelector("input"),
-          button = document.querySelector("button"),
-          copyBtn = document.querySelector("span.far"),
-          copyActive = document.querySelector("span.fas");
-          let chars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()_+~`|}{[]:;?><,./-=";
-          button.onclick = ()=>{
-            let i,
-            randomPassword = "";
-            copyBtn.style.display = "block";
-            copyActive.style.display = "none";
-            for (i = 0; i < 16; i++) {
-              randomPassword = randomPassword + chars.charAt(
-                Math.floor(Math.random() * chars.length)
-              );
-            }
-            display.value = randomPassword;
-          }
-          function copy(){
-            copyBtn.style.display = "none";
-            copyActive.style.display = "block";
-            display.select();
-            document.execCommand("copy");
-          }
-       </script>
-  </body>
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+
+  <!--==================== ICONOS ====================-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+</head>
+<body>
+  <div class="container">
+    <div class="text">
+    Generador de contraseñas<br>aleatorias 
+    </div>
+    <div class="input-data">
+        <div class="display">
+          <input type="text">
+          <span class="far fa-copy" onclick="copy()"></span>
+          <span class="fas fa-copy" onclick="copy()"></span>
+        </div>
+        <button>Generar contraseña</button>
+    </div>
+  </div>
+  <!--==================== SCRIPT ====================-->
+  <script>
+    const display = document.querySelector("input"),
+    button = document.querySelector("button"),
+    copyBtn = document.querySelector("span.far"),
+    copyActive = document.querySelector("span.fas");
+    let chars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()_+~`|}{[]:;?><,./-=";
+    button.onclick = ()=>{
+      let i,
+      randomPassword = "";
+      copyBtn.style.display = "block";
+      copyActive.style.display = "none";
+      for (i = 0; i < 16; i++) {
+        randomPassword = randomPassword + chars.charAt(
+          Math.floor(Math.random() * chars.length)
+        );
+      }
+      display.value = randomPassword;
+    }
+    function copy(){
+      copyBtn.style.display = "none";
+      copyActive.style.display = "block";
+      display.select();
+      document.execCommand("copy");
+    }
+  </script>
+</body>
 </html>
