--- a/Random Password Generator/index.html
+++ b/Random Password Generator/index.html
@@ -1,41 +1,39 @@
-
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS-JS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS-JS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Random Password Generator</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Random Password Generator</title>
 
-     <!--==================== Unicon Icons ====================-->
-   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
 
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="password-box">
-        <input type="text" disabled />
-        <i class="uil uil-copy copy-icon"></i>
-      </div>
-      <div class="range-box">
-        <input type="range" min="6" max="40" value="8" />
-        <span class="slider-number">8</span>
-      </div>
-      <button class="generate-button">Generar Contraseña</button>
+  <!--==================== ICONOS ====================-->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+</head>
+<body>
+  <div class="wrapper">
+    <div class="password-box">
+      <input type="text" disabled />
+      <i class="uil uil-copy copy-icon"></i>
     </div>
-       <!--==================== script ====================-->
-    <script src="assets/js/script.js"></script>
-  </body>
+    <div class="range-box">
+      <input type="range" min="6" max="40" value="8" />
+      <span class="slider-number">8</span>
+    </div>
+   <button class="generate-button">Generar Contraseña</button>
+  </div>
+  <!--==================== SCRIPT ====================-->
+  <script src="assets/js/script.js"></script>
+</body>
 </html>
