--- a/Show & Hide Password/index.html
+++ b/Show & Hide Password/index.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS-JS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS-JS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Show & Hide Password</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Show & Hide Password</title>
 
-    <!--==================== Icounscout ====================-->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+
+  <!--==================== ICONOS ====================-->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body>
-    <div class="container">
-        <div class="input-box">
-            <input type="password" spellcheck="false" required>
-            <label for="">Contraseña</label>
-            <i class="uil uil-eye-slash toggle"></i>
-        </div>
+  <div class="container">
+    <div class="input-box">
+      <input type="password" spellcheck="false" required>
+      <label for="">Contraseña</label>
+      <i class="uil uil-eye-slash toggle"></i>
     </div>
-           <!--==================== script ====================-->
-    <script>
-        const toggle = document.querySelector(".toggle"),
-              input = document.querySelector("input");
-              toggle.addEventListener("click", () =>{
-                  if(input.type ==="password"){
-                    input.type = "text";
-                    toggle.classList.replace("uil-eye-slash", "uil-eye");
-                  }else{
-                    input.type = "password";
-                  }
-              })
-    </script>
-  </body>
+  </div>
+  <!--==================== SCRIPT ====================-->
+  <script>
+  const toggle = document.querySelector(".toggle"),
+    input = document.querySelector("input");
+    toggle.addEventListener("click", () =>{
+        if(input.type ==="password"){
+          input.type = "text";
+          toggle.classList.replace("uil-eye-slash", "uil-eye");
+        }else{
+          input.type = "password";
+        }
+    })
+  </script>
+</body>
 </html>
