--- a/Show Hide Password 2/index.html
+++ b/Show Hide Password 2/index.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS-JS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS-JS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Show Hide Password with Floating Input Placeholder Text Animation</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Show Hide Password with Floating Input Placeholder Text Animation</title>
 
-    </head>
-
-  <body>
-    <div class="inputBox">
-      <input type="password" required id="password">
-      <span>Contraseña</span>
-      <div id="toggle" onclick="showHide();"></div>
-      </div>
-       <!--==================== script ====================-->
-    <script>
-      const password =document.getElementById('password');
-      const toggle =document.getElementById('toggle');
-      function showHide(){
-        if(password.type==='password'){
-          password.setAttribute('type','text');
-          toggle.classList.add('hide')
-        }
-        else{
-          password.setAttribute('type','password');
-          toggle.classList.remove('hide')
-        }
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+</head>
+<body>
+  <div class="inputBox">
+    <input type="password" required id="password">
+    <span>Contraseña</span>
+    <div id="toggle" onclick="showHide();"></div>
+  </div>
+  <!--==================== SCRIPT ====================-->
+  <script>
+    const password =document.getElementById('password');
+    const toggle =document.getElementById('toggle');
+    function showHide(){
+      if(password.type==='password'){
+        password.setAttribute('type','text');
+        toggle.classList.add('hide')
       }
-    </script>
-  </body>
+      else{
+        password.setAttribute('type','password');
+        toggle.classList.remove('hide')
+      }
+    }
+  </script>
+</body>
 </html>
