--- a/Show Hide Password 3/index.html
+++ b/Show Hide Password 3/index.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS-JS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS-JS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Show Hide Password</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
-   
-       <!--==================== BOXICONS ====================-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Show Hide Password</title>
 
-    </head>
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
 
-  <body>
-    <div class="input">
-      <div class="input__overlay" id="input-overlay"></div>
-
-      <i class='bx bx-lock-alt input__lock'></i>
-      <input type="password" placeholder="Password..." class="input__password" id="input-pass">
-      <i class='bx bx-hide input__icon' id="input-icon"></i>
+  <!--==================== ICONOS ====================-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+</head>
+<body>
+  <div class="input">
+    <div class="input__overlay" id="input-overlay"></div>
+    <i class='bx bx-lock-alt input__lock'></i>
+    <input type="password" placeholder="Password..." class="input__password" id="input-pass">
+    <i class='bx bx-hide input__icon' id="input-icon"></i>
   </div>
-
-       <!--==================== script ====================-->
-    <script src="assets/js/script.js"></script>
-  </body>
+  <!--==================== SCRIPT ====================-->
+  <script src="assets/js/script.js"></script>
+</body>
 </html>
