--- a/Validate Email/index.html
+++ b/Validate Email/index.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<html lang="es">
+<head>
   <!--==================== METADATOS ====================-->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Inputs">
-      <meta name="keywords" content="HTML-CSS-JS">
-      <meta name="author" content="Rocio Cuello">
-      
-      <!--==================== CSS ====================-->
-      <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Inputs">
+  <meta name="keywords" content="HTML-CSS-JS">
+  <meta name="author" content="Rocio Cuello">
 
-      <!--==================== TITULO ====================-->
-      <title>Inputs | Validate Email</title>
+  <!--==================== CSS ====================-->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-      <!--==================== ICONO DE PESTAÑA ====================-->
-      <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <!--==================== TITULO ====================-->
+  <title>Inputs | Validate Email</title>
 
-     <!--==================== Unicons ====================-->
-    <link
-      rel="stylesheet"
-      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
-    />
-  </head>
-  <body>
-    <div class="input-field">
-      <input type="email" placeholder="Escribe tu email" spellcheck="false"/>
-      <i class="uil uil-envelope email-icon"></i>
-    </div>
-      <!--==================== script ====================-->
-    <script>
-      const input = document.querySelector("input"),
-            emailIcon = document.querySelector(".email-icon")
-            input.addEventListener("keyup", () =>{
-              let pattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/;
-              if(input.value === ""){
-                emailIcon.classList.replace("uil-check-circle", "uil-envelope");
-                return emailIcon.style.color = "#b4b4b4";
-              }
-              if(input.value.match(pattern)){
-                emailIcon.classList.replace("uil-envelope", "uil-check-circle");
-                return emailIcon.style.color = "#4bb543"
-              }
-              emailIcon.classList.replace("uil-check-circle", "uil-envelope");
-              emailIcon.style.color = "#de0611"
-            })
-    </script>
-  </body>
+  <!--==================== ICONO DE PESTAÑA ====================-->
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+
+  <!--==================== ICONOS ====================-->
+  <link rel="stylesheet"VBhref="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
+</head>
+<body>
+  <div class="input-field">
+    <input type="email" placeholder="Escribe tu email" spellcheck="false"/>
+    <i class="uil uil-envelope email-icon"></i>
+  </div>
+  <!--==================== SCRIPT ====================-->
+  <script>
+    const input = document.querySelector("input"),
+          emailIcon = document.querySelector(".email-icon")
+          input.addEventListener("keyup", () =>{
+            let pattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/;
+            if(input.value === ""){
+              emailIcon.classList.replace("fa-circle-check", "uil-envelope");
+              return emailIcon.style.color = "#b4b4b4";
+            }
+            if(input.value.match(pattern)){
+              emailIcon.classList.replace("uil-envelope", "fa-circle-check");
+              return emailIcon.style.color = "hsl(169, 81%, 50%)"
+            }
+            emailIcon.classList.replace("fa-circle-check", "uil-envelope");
+            emailIcon.style.color = "#de0611"
+          })
+  </script>
+</body>
 </html>
